# basic_protobuf_cmake

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  commands
hdrs/: address_book.h
proto/: person.proto
src/: address_book.cpp  main.cpp
tests/: CMakeLists.txt  address_book_test.cpp
